chore: format config files with prettier
Also update CI workflow to include prettier check

--- a/packages/fp-clean/tsconfig.json
+++ b/packages/fp-clean/tsconfig.json
@@ -3,11 +3,11 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./src/*"],
+      "~/*": ["./src/*"]
     },
     "noEmit": false,
     "declaration": true,
-    "emitDeclarationOnly": false,
+    "emitDeclarationOnly": false
   },
-  "include": ["src"],
+  "include": ["src"]
 }
