--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,14 +29,17 @@ jobs:
       - name: Install dependencies
         run: bun install --frozen-lockfile
 
-      - name: Type check (root)
+      - name: Check formatting with prettier
+        run: bunx prettier --check .
+
+      - name: Type check root config
         run: bunx tsc --noEmit -p tsconfig.json
 
-      - name: Type check (package)
-        run: bunx tsc --noEmit -p packages/fp-clean/tsconfig.json
+      - name: Type check package
+        run: cd packages/fp-clean && bunx tsc --noEmit -p tsconfig.json
 
       - name: Build package
         run: cd packages/fp-clean && bun run build
 
       - name: Run tests
-        run: bun test
+        run: cd packages/fp-clean && bun test
