Fix TypeDoc configuration for API documentation generation
- Remove typedoc-plugin-markdown dependency (compatibility issues)
- Update generate-api script to use HTML output
- Add tsconfig reference to typedoc.json
- API documentation now generates successfully

--- a/packages/fp-clean-docs/package.json
+++ b/packages/fp-clean-docs/package.json
@@ -13,7 +13,7 @@
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
     "typecheck": "tsc",
-    "generate-api": "typedoc --plugin typedoc-plugin-markdown --out docs/api ../fp-clean/src/index.ts"
+    "generate-api": "typedoc --out docs/api ../fp-clean/src/index.ts"
   },
   "dependencies": {
     "@docusaurus/core": "3.7.0",
@@ -29,7 +29,6 @@
     "@docusaurus/tsconfig": "3.7.0",
     "@docusaurus/types": "3.7.0",
     "typedoc": "^0.27.0",
-    "typedoc-plugin-markdown": "^4.4.0",
     "typescript": "~5.6.2"
   },
   "browserslist": {
