feat: add documentation, examples, and benchmarks for Service.proxy
- Add comprehensive README with Service.proxy documentation
- Create examples directory with basic usage and equivalence comparison
- Integrate benchmark suite into CI pipeline
- Remove deprecated documentation package

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,3 +43,7 @@ jobs:
 
       - name: Run tests
         run: cd packages/fp-clean && bun test
+
+      - name: Run benchmarks (fast mode)
+        run: cd packages/fp-clean && bun run benchmark:fast
+        continue-on-error: true
