--- a/packages/fp-clean/package.json
+++ b/packages/fp-clean/package.json
@@ -9,13 +9,16 @@
   "version": "1.0.0-alpha.1",
   "type": "module",
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "tinybench": "^6.0.0"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
   "scripts": {
     "build": "tsc -p tsconfig.build.json --outDir dist",
-    "test": "bun test"
+    "test": "bun test",
+    "benchmark": "bun benchmarks/index.ts",
+    "benchmark:fast": "bun benchmarks/index.ts --fast"
   }
 }
