--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,10 @@ report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 
 # Finder (MacOS) folder config
 .DS_Store
+
+# Debug files
+debug.ts
+debug.test.ts
+
+# Backup files
+*.backup
